--- a/Projeto Wexer PSI/assets/style/styleProntuario.css
+++ b/Projeto Wexer PSI/assets/style/styleProntuario.css
@@ -169,7 +169,7 @@ i {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 50rem;
+    width: 100%;
     height: 4rem;
     background: #FFFFFF;
     border: 1px solid #E0E0E0;
@@ -211,8 +211,17 @@ i {
 #textFilter {
     display: flex;
     align-items: center;
-    justify-content: right;
+    justify-content: center;
     gap: 10px;
+    font-family: 'Montserrat';
+    font-size: 14px;
+    line-height: 17px;
+    color: #757575;
+}
+
+select {
+    outline: none !important;
+    font-weight: bold;
 
 }
 
@@ -231,7 +240,7 @@ p {
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
     border-radius: 0px 8px 8px 0px;
     padding: 0 1rem;
-    margin-top: 1rem;
+    margin-top: 2rem;
 }
 
 #btnSection {
@@ -244,7 +253,7 @@ p {
     margin-top: -26px;
 }
 
-#titleSection {
+#titleInfo {
     font-family: 'Montserrat';
     font-weight: 500;
     font-size: 16px;
@@ -253,7 +262,7 @@ p {
     margin-top: 30px;
 }
 
-#dateSection {
+#dateInfo {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
@@ -263,17 +272,17 @@ p {
     margin-bottom: 1rem;
 }
 
-#textSection {
+#textInfo {
     width: 100%;
     font-family: 'Montserrat';
     font-weight: 400;
     font-size: 12px;
     line-height: 170%;
     color: #424242;
-    text-align:justify;
+    text-align: justify;
 }
 
-#showEditDelSelection{
+#showEditDelSelection {
     font-family: 'Montserrat';
     color: #424242;
     font-weight: bold;
@@ -305,36 +314,7 @@ p {
     margin-top: -26px;
 }
 
-#titleRelevantFact {
-    font-family: 'Montserrat';
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 22px;
-    color: #000000;
-    margin-top: 30px;
-}
-
-#dateRelevantFact {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 17px;
-    color: #616161;
-    margin-bottom: 1rem;
-}
-
-#textRelevantFact {
-    width: 100%;
-    font-family: 'Montserrat';
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 170%;
-    color: #424242;
-    text-align:justify;
-}
-
-#showEditDelRelevantFact{
+#showEditDelRelevantFact {
     font-family: 'Montserrat';
     color: #424242;
     font-weight: bold;
