--- a/Projeto Wexer PSI/assets/style/styleLogin.css
+++ b/Projeto Wexer PSI/assets/style/styleLogin.css
@@ -1,7 +1,9 @@
 #box{
+    width: auto;
+    height: 34.5rem;
     display: flex;
     justify-content: center;
-    margin-top: 8.6563rem;
+    margin-top: 4rem;
     background-image: url("../imagens/login/bgimg.png");
     background-repeat: no-repeat;   
    
@@ -9,13 +11,13 @@
 
 img{
     width: 20.06rem;
-    margin-top: 4.8438rem;  
-    margin-bottom: 3rem;  
+    margin-top: 2rem;  
+    margin-bottom: 1.5rem;  
 }
 
 .container{
-    width: 38rem ;
-    height: 38rem;
+    width: 32rem ;
+   height: 31rem;
     background: #017849;  
     box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
     border-radius: 16px;
