--- a/Projeto Wexer PSI/assets/style/styleProntuario.css
+++ b/Projeto Wexer PSI/assets/style/styleProntuario.css
@@ -165,7 +165,7 @@ i {
     padding-left: 2rem;
 }
 
-#boxSection {
+#boxSession {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -229,7 +229,7 @@ p {
     padding-bottom: 10px;
 }
 
-#cardSections {
+#cardSessions {
     display: flex;
     justify-content: space-between;
     width: auto;
@@ -243,7 +243,7 @@ p {
     margin-top: 2rem;
 }
 
-#btnSection {
+#btnSessions {
     position: absolute;
     width: 48px;
     height: 48px;
